kubernetes/netology-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment
  labels:
    app: ntlg-dpl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ntlg-dpl
  template:
    metadata:
      labels:
        app: ntlg-dpl
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
      
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1180
          name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
