kubernetes/init-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: web
      port: 80
